--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,66 @@
     --morado-dark: #495194;
     --morado: #878ECD;
     --lila: #B9BBDF;
-    --lila-light: #DDE7F2;
-    --aqua-light: #DFF4F3;
+    --lila-light: #e2d9f3;
+    --aqua-light: #d3efee;
+    --font-base: 'Nunito', sans-serif;
 
 
 }
 body{
-    background-color: var(--morado);
+    background-color: var(--base-color);
+    width: 100vw;
+    height: 100vh;
+}
+
+header{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    position: absolute;
+}
+
+header nav{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+header nav .nav-logo{
+    height: 80%;
+    display: flex;
+    align-items: center;
+    width: 20%;
+}
+
+header nav .nav-logo img{
+    height: 80%;
+    padding-left: 45%;
+}
+
+header nav .nav-name-section{
+    color: var(--lila-light);
+    height: 80%;
+    display: flex;
+    align-items: flex-start;
+    width: 80%;
+    flex-direction: column;
+}
+
+header nav .nav-name-section p{
+    font-family: var(--font-base);
+    font-size: 24px;
+    height: 50%;
+    display: flex;
+    align-items: flex-end;
+
+}
+
+header nav .nav-name-section .linea{
+    height: 49%;
+    width: 100%;
+    border-top: 2px solid var(--morado);
+    margin-top: .5%;
 }
