--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
     --lila: #B9BBDF;
     --lila-light: #e2d9f3;
     --aqua-light: #d3efee;
-    --morado-datacard: #696287;
+    --morado-datacard: #585078;
     --font-base: 'Nunito', sans-serif;
 
 
@@ -115,7 +115,7 @@ main .main-data .data-card .card img{
 
 main .main-data .data-card .numbers{
     position: absolute;
-    bottom: 32%;
+    bottom: 26%;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -153,7 +153,7 @@ main .main-data .data-card .user-name{
 main .main-data .data-card .user-name input{
     background: none;
     width: 32%;
-    font-size: 32px;
+    font-size: 22px;
     color: var(--morado-datacard);
     text-align: left;
     letter-spacing: 1px;
@@ -176,9 +176,9 @@ main .main-data .digits-state{
     margin-top: 1%;
 }
 
-main .main-data .digits-state p{
+main .main-data .digits-state button{
     display: flex;
-    width: 100%;
+    width: auto;
     height: 100%;
     align-content: center;
     align-items: center;
@@ -187,9 +187,11 @@ main .main-data .digits-state p{
     font-size: 18px;
     color: var(--lila);
     cursor: pointer;
+    background: none;
+    border: none;
 }
 
-main .main-data .digits-state p:hover{
+main .main-data .digits-state button:hover{
     color: var(--morado);
 }
 
@@ -214,4 +216,8 @@ main .main-data .validate-card button{
 
 main .main-data .validate-card button:hover{
     background-color: var(--morado-dark);
+}
+
+main .main-data .numbers .hideNumbers{
+    opacity: 0%;
 }
