--- a/src/style.css
+++ b/src/style.css
@@ -113,6 +113,10 @@ main .main-data .data-card .card img{
     width: 35%;
 }
 
+main .main-data .data-card .card img:hover{
+    box-shadow: 0px 5px 25px var(--morado-dark);
+}
+
 main .main-data .data-card .numbers{
     position: absolute;
     bottom: 26%;
@@ -292,11 +296,27 @@ main .validation-message .validation-message-right .option-buttons .validate-new
     cursor: pointer;
 }
 
+main .validation-message .validation-message-right .option-buttons .validate-new-card:hover{
+    background-color: var(--lila);
+    color: var(--morado-dark);
+}
+
 main .validation-message .validation-message-right .option-buttons .exit{
     font-size: 20px;
     font-family: var(--font-base);
-    color: #f2f2f2;
     cursor: pointer;
     margin-top: 2%;
 }
 
+main .validation-message .validation-message-right .option-buttons .exit a{
+    color: #f2f2f2;
+    text-decoration: none;
+}
+
+main .validation-message .validation-message-right .option-buttons .exit a:hover{
+    color: var(--lila)
+}
+
+.display-off{
+    visibility: hidden;
+}
