--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,30 @@ main .main-data .data-card .card img:hover{
     box-shadow: 0px 5px 25px var(--morado-dark);
 }
 
+/* Card animation */
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.mistake-shake{
+    animation: shake 1s;
+}
+
+.mistake-shake-color{
+    box-shadow: 0px 5px 25px rgb(184, 36, 92);
+}
+
+
 main .main-data .data-card .numbers{
     position: absolute;
     bottom: 26%;
@@ -173,6 +197,14 @@ main .main-data .data-card .user-name input{
 
 main .main-data .data-card .user-name input:hover{
     border-bottom: 1px solid var(--morado-datacard);
+}
+
+main .main-data .data-card .user-name .user-name-span{
+    color: rgb(184 36 92);
+    font-family: var(--font-base);
+    font-size: 12px;
+    font-weight: 700;
+    margin-left: 4%;
 }
 
 main .main-data .digits-state{
