--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+::placeholder{
+    color: #7e7b8d;
+}
+
 :root{
     --base-color: #060920;
     --morado-dark: #495194;
@@ -10,7 +14,7 @@
     --lila: #B9BBDF;
     --lila-light: #e2d9f3;
     --aqua-light: #d3efee;
-    --morado-datacard: #585078;
+    --morado-datacard: #5a5474;
     --font-base: 'Nunito', sans-serif;
 
 
@@ -117,6 +121,31 @@ main .main-data .data-card .card img:hover{
     box-shadow: 0px 5px 25px var(--morado-dark);
 }
 
+/* Card animation */
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.mistake-shake{
+    animation: shake 1s;
+    animation-iteration-count: infinite;
+}
+
+.mistake-shake-color{
+    box-shadow: 0px 5px 25px rgb(184, 36, 92);
+}
+
+
 main .main-data .data-card .numbers{
     position: absolute;
     bottom: 26%;
@@ -147,6 +176,17 @@ main .main-data .data-card .numbers input:hover{
     border-bottom: 1px solid var(--morado-datacard);
 }
 
+main .main-data .data-card .card-numbers-span{
+    color: rgb(184 36 92);
+    font-family: var(--font-base);
+    font-size: 12px;
+    font-weight: 700;
+    margin-left: 4%;
+    position: absolute;
+    bottom: 23%;
+    left: 31.5%;
+}
+
 main .main-data .data-card .user-name{
     position: absolute;
     bottom: 10%;
@@ -169,6 +209,14 @@ main .main-data .data-card .user-name input{
 
 main .main-data .data-card .user-name input:hover{
     border-bottom: 1px solid var(--morado-datacard);
+}
+
+main .main-data .data-card .user-name .user-name-span{
+    color: rgb(184 36 92);
+    font-family: var(--font-base);
+    font-size: 12px;
+    font-weight: 700;
+    margin-left: 4%;
 }
 
 main .main-data .digits-state{
@@ -319,4 +367,33 @@ main .validation-message .validation-message-right .option-buttons .exit a:hover
 
 .display-off{
     visibility: hidden;
+}
+
+/* 404 styles */
+.main-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.main-img img{
+    border-radius: 25px;
+    width: 50%;
+}
+
+.main-message{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--font-base);
+    margin-top: 4%;
+}
+
+.main-message h1{
+    color: #f2f2f2;
+}
+
+.main-message h2{
+    color: var(--lila-light);
 }
