add new text to 404 file

--- a/src/style.css
+++ b/src/style.css
@@ -397,3 +397,7 @@ main .validation-message .validation-message-right .option-buttons .exit a:hover
 .main-message h2{
     color: var(--lila-light);
 }
+
+.main-message h3{
+    color: var(--morado);
+}
